--- a/debian/po/ar.po
+++ b/debian/po/ar.po
@@ -30,9 +30,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: ar\n"
 "Report-Msgid-Bugs-To: apt-setup@packages.debian.org\n"
-"POT-Creation-Date: 2024-05-11 20:02+0000\n"
-"PO-Revision-Date: 2024-07-27 09:09+0000\n"
-"Last-Translator: Muhammad Bahaa <muhammad.bahaa1@gmail.com>\n"
+"POT-Creation-Date: 2025-04-28 20:01+0000\n"
+"PO-Revision-Date: 2025-02-27 22:46+0000\n"
+"Last-Translator: Amr Walryh <amro@users.noreply.hosted.weblate.org>\n"
 "Language-Team: \n"
 "Language: ar\n"
 "MIME-Version: 1.0\n"
@@ -525,7 +525,7 @@ msgstr "تفحّص المرآة..."
 #. :sl5:
 #: ../apt-mirror-setup.templates:2001
 msgid "Use non-free firmware?"
-msgstr "تريد استخدام البرامج الغير حرة؟"
+msgstr "استخدام برامج غير حرة؟"
 
 #. Type: boolean
 #. Description
@@ -536,6 +536,9 @@ msgid ""
 "hardware components (such as Wi-Fi cards or audio chipsets), which may not "
 "function fully or at all without it."
 msgstr ""
+"البرنامج الثابت هو نوع من البرمجيات التي توفر تحكمًا منخفض المستوى في بعض "
+"مكونات الأجهزة (مثل بطاقات الواي-فاي أو رقاقات الصوت)، والتي قد لا تعمل بشكل "
+"كامل أو على الإطلاق دونها."
 
 #. Type: boolean
 #. Description
@@ -547,6 +550,9 @@ msgid ""
 "freedoms to use, modify, or share the software, and generally does not have "
 "source forms that you may study."
 msgstr ""
+"رغم ان بعض البرامج المدمجة غير الحرة ليست جزءا من دبيان الا انها مهيأة لتعمل "
+"معه. لهذه البرامج المدمجة رخص متنوعة تقيد حرياتك في استخدام أو تعديل أو "
+"مشاركة البرمجيات وليس لها عموما أشكال برمجية يمكنك دراستها."
 
 #. Type: boolean
 #. Description
@@ -554,12 +560,7 @@ msgstr ""
 #. Type: boolean
 #. Description
 #. :sl1:
-#. Type: boolean
-#. Description
-#. This template is used by the Ubuntu version of d-i.
-#. :sl2:
 #: ../apt-mirror-setup.templates:2001 ../apt-mirror-setup.templates:3001
-#: ../apt-mirror-setup.templates-ubuntu:1001
 msgid "Please choose whether you want to have it available anyway."
 msgstr "رجاء اختر ما إذا كنت تريد توفيرها على أي حال."
 
@@ -608,26 +609,7 @@ msgstr ""
 #. Type: boolean
 #. Description
 #. :sl1:
-#. Type: boolean
-#. Description
-#. This template is used by the Ubuntu version of d-i.
-#. :sl2:
-#. Type: boolean
-#. Description
-#. This template is used by the Ubuntu version of d-i.
-#. :sl2:
-#. Type: boolean
-#. Description
-#. This template is used by the Ubuntu version of d-i.
-#. :sl2:
-#. Type: boolean
-#. Description
-#. This template is used by the Ubuntu version of d-i.
-#. :sl2:
-#: ../apt-mirror-setup.templates:4001 ../apt-mirror-setup.templates-ubuntu:2001
-#: ../apt-mirror-setup.templates-ubuntu:3001
-#: ../apt-mirror-setup.templates-ubuntu:4001
-#: ../apt-mirror-setup.templates-ubuntu:5001
+#: ../apt-mirror-setup.templates:4001
 msgid ""
 "Please choose whether you want this software to be made available to you."
 msgstr "رجاء اختر ما إذا كنت تريد توفير هذه البرامج لك."
@@ -694,119 +676,3 @@ msgstr "الاستمرار دون مسلكٍ افتراضي؟"
 #: ../apt-mirror-setup.templates:7001
 msgid "No network mirror was selected."
 msgstr "لم يتم اختيار مرآة شبكية."
-
-#. Type: boolean
-#. Description
-#. This template is used by the Ubuntu version of d-i.
-#. :sl2:
-#: ../apt-mirror-setup.templates-ubuntu:1001
-msgid "Use restricted software?"
-msgstr "استخدام البرامج المُقيّدة؟"
-
-#. Type: boolean
-#. Description
-#. This template is used by the Ubuntu version of d-i.
-#. :sl2:
-#: ../apt-mirror-setup.templates-ubuntu:1001
-msgid ""
-"Some non-free software is available in packaged form. Though this software "
-"is not a part of the main distribution, standard package management tools "
-"can be used to install it. This software has varying licenses which may "
-"prevent you from using, modifying, or sharing it."
-msgstr ""
-"بعض البرامج الغير حرّة (مجانية) متوفّرة بنسق محزّم. مع أن هذه البرامج ليست جزءً "
-"من التوزيعة الأساسية، يمكن استخدام أدوات إدارة الحزم الاعتيادية لتثبيتها. "
-"لهذه البرامج رخص متنوعة والتي قد تمنعك من استخدمها، أو تعديلها، أو المشاركة "
-"بها."
-
-#. Type: boolean
-#. Description
-#. This template is used by the Ubuntu version of d-i.
-#. :sl2:
-#: ../apt-mirror-setup.templates-ubuntu:2001
-msgid "Use software from the \"universe\" component?"
-msgstr "استخدام البرامج من المكوّن \"universe\"؟"
-
-#. Type: boolean
-#. Description
-#. This template is used by the Ubuntu version of d-i.
-#. :sl2:
-#: ../apt-mirror-setup.templates-ubuntu:2001
-msgid ""
-"Some additional software is available in packaged form. This software is "
-"free and, though it is not a part of the main distribution, standard package "
-"management tools can be used to install it."
-msgstr ""
-"بعد البرامج الإضافية متوفرة بنسق محزّم. هذه البرامج حرّة (مجانية)، وعلى الرغم "
-"من أنها ليست جزءً من التوزيعة الأساسية، يمكن استخدام أدوات إدارة الحزم "
-"الاعتيادية لتثبيتها."
-
-#. Type: boolean
-#. Description
-#. This template is used by the Ubuntu version of d-i.
-#. :sl2:
-#: ../apt-mirror-setup.templates-ubuntu:3001
-msgid "Use software from the \"multiverse\" component?"
-msgstr "استخدام البرامج من المكوّن \"multiverse\"؟"
-
-#. Type: boolean
-#. Description
-#. This template is used by the Ubuntu version of d-i.
-#. :sl2:
-#: ../apt-mirror-setup.templates-ubuntu:3001
-msgid ""
-"Some non-free software is available in packaged form. Though this software "
-"is not a part of the main distribution, standard package management tools "
-"can be used to install it. This software has varying licenses and (in some "
-"cases) patent restrictions which may prevent you from using, modifying, or "
-"sharing it."
-msgstr ""
-"بعض البرامج الغير حرّة (مجانية) متوفّرة بنسق حزم. مع أن هذه البرامج ليست جزءً "
-"من التوزيعة الأساسية، يمكن استخدام أدوات إدارة الحزم الاعتيادية لتثبيتها. "
-"لهذه البرامج رخص متنوعة والتي قد تمنعك في بعض الأوقات من استخدمها، أو "
-"تعديلها، أو المشاركة بها."
-
-#. Type: boolean
-#. Description
-#. This template is used by the Ubuntu version of d-i.
-#. :sl2:
-#: ../apt-mirror-setup.templates-ubuntu:4001
-msgid "Use software from the \"partner\" repository?"
-msgstr "استخدام البرامج من مخزن \"partner\"؟"
-
-#. Type: boolean
-#. Description
-#. This template is used by the Ubuntu version of d-i.
-#. :sl2:
-#: ../apt-mirror-setup.templates-ubuntu:4001
-msgid ""
-"Some additional software is available from Canonical's \"partner\" "
-"repository. This software is not part of Ubuntu, but is offered by Canonical "
-"and the respective vendors as a service to Ubuntu users."
-msgstr ""
-"تتوفر بعض البرامج الإضافية في مستودع \"partner\" لشركة Canonical. هذه "
-"البرامج ليست جزءً من أبونتو، لكن توفرها شركة Canonical ومصنّعوها كخدمة "
-"لمستخدمي أبونتو."
-
-#. Type: boolean
-#. Description
-#. This template is used by the Ubuntu version of d-i.
-#. :sl2:
-#: ../apt-mirror-setup.templates-ubuntu:5001
-msgid "Use backported software?"
-msgstr "استخدام برامج backport؟"
-
-#. Type: boolean
-#. Description
-#. This template is used by the Ubuntu version of d-i.
-#. :sl2:
-#: ../apt-mirror-setup.templates-ubuntu:5001
-msgid ""
-"Some software has been backported from the development tree to work with "
-"this release. Although this software has not gone through such complete "
-"testing as that contained in the release, it includes newer versions of some "
-"applications which may provide useful features."
-msgstr ""
-"تم عمل backport لبعض البرامج من شجرة الترقية كي تعمل مع هذه الإصدارة. مع أن "
-"هذه البرامج لم يتم فحصها بالكامل كالتي هي موجودة في الإصدارة، إلا أنها تحتوي "
-"بعض النسخ الأجدد من بعض التطبيقات والذي قد يوفر مزايا مفيدة."
