--- a/debian/po/es.po
+++ b/debian/po/es.po
@@ -18,7 +18,7 @@
 # Rubén Porras Campo <nahoo@inicia.es>, 2005
 # Omar Campagne <ocampagne@gmail.com>, 2010
 # Javier Fernández-Sanguino <jfs@debian.org>, 2003-2012, 2014-2018, 2020
-# Camaleón <noelamac@gmail.com>, 2022.
+# Camaleón <noelamac@gmail.com>, 2022, 2024.
 # Manuel \"Venturi\" Porras Peralta <venturi@openmailbox.org>, 2017.
 #
 # Equipo de traducción al español, por favor lean antes de traducir
@@ -60,9 +60,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: apt-setup@packages.debian.org\n"
-"POT-Creation-Date: 2024-05-11 20:02+0000\n"
-"PO-Revision-Date: 2024-05-13 10:00+0000\n"
-"Last-Translator: gallegonovato <fran-carro@hotmail.es>\n"
+"POT-Creation-Date: 2025-04-28 20:01+0000\n"
+"PO-Revision-Date: 2025-07-07 20:50+0000\n"
+"Last-Translator: Santiago Vila <sanvila@debian.org>\n"
 "Language-Team: Debian Spanish <debian-l10n-spanish@lists.debian.org>\n"
 "Language: es\n"
 "MIME-Version: 1.0\n"
@@ -145,7 +145,7 @@ msgstr "Ignorar"
 #. Description
 #: ../apt-setup-udeb.templates:8002
 msgid "Downloading local repository key failed:"
-msgstr "Falló la descarga de la clave local del repositorio:"
+msgstr "Falló la descarga de la clave del repositorio local:"
 
 #. Type: select
 #. Description
@@ -247,7 +247,7 @@ msgid ""
 "Debian has two services that provide updates to releases: security and "
 "release updates."
 msgstr ""
-"Debian tiene dos servicios que ofrece actualizaciones a una versión "
+"Debian tiene dos servicios que ofrecen actualizaciones a una versión "
 "publicada: seguridad y actualizaciones de la distribución."
 
 #. Type: multiselect
@@ -258,7 +258,7 @@ msgid ""
 "Security updates help to keep your system secured against attacks. Enabling "
 "this service is strongly recommended."
 msgstr ""
-"Las actualizaciones de seguridad le permiten mantener a su sistema protegido "
+"Las actualizaciones de seguridad le permiten mantener el sistema protegido "
 "frente a ataques. Se recomienda encarecidamente que active este servicio."
 
 #. Type: multiselect
@@ -572,7 +572,7 @@ msgstr "Analizando la réplica..."
 #. :sl5:
 #: ../apt-mirror-setup.templates:2001
 msgid "Use non-free firmware?"
-msgstr "¿Usas un firmware no libre?"
+msgstr "¿Usar firmware no libre?"
 
 #. Type: boolean
 #. Description
@@ -608,14 +608,9 @@ msgstr ""
 #. Type: boolean
 #. Description
 #. :sl1:
-#. Type: boolean
-#. Description
-#. This template is used by the Ubuntu version of d-i.
-#. :sl2:
 #: ../apt-mirror-setup.templates:2001 ../apt-mirror-setup.templates:3001
-#: ../apt-mirror-setup.templates-ubuntu:1001
 msgid "Please choose whether you want to have it available anyway."
-msgstr "Por favor, elija si, aún así, quiere tenerlo disponible."
+msgstr "Por favor, elija si quiere tenerlo disponible de todas formas."
 
 #. Type: boolean
 #. Description
@@ -664,26 +659,7 @@ msgstr ""
 #. Type: boolean
 #. Description
 #. :sl1:
-#. Type: boolean
-#. Description
-#. This template is used by the Ubuntu version of d-i.
-#. :sl2:
-#. Type: boolean
-#. Description
-#. This template is used by the Ubuntu version of d-i.
-#. :sl2:
-#. Type: boolean
-#. Description
-#. This template is used by the Ubuntu version of d-i.
-#. :sl2:
-#. Type: boolean
-#. Description
-#. This template is used by the Ubuntu version of d-i.
-#. :sl2:
-#: ../apt-mirror-setup.templates:4001 ../apt-mirror-setup.templates-ubuntu:2001
-#: ../apt-mirror-setup.templates-ubuntu:3001
-#: ../apt-mirror-setup.templates-ubuntu:4001
-#: ../apt-mirror-setup.templates-ubuntu:5001
+#: ../apt-mirror-setup.templates:4001
 msgid ""
 "Please choose whether you want this software to be made available to you."
 msgstr "Por favor, elija si quiere tener este software disponible."
@@ -752,126 +728,3 @@ msgstr "¿Desea continuar sin una réplica en red?"
 #: ../apt-mirror-setup.templates:7001
 msgid "No network mirror was selected."
 msgstr "No se seleccionó ninguna réplica en red."
-
-#. Type: boolean
-#. Description
-#. This template is used by the Ubuntu version of d-i.
-#. :sl2:
-#: ../apt-mirror-setup.templates-ubuntu:1001
-msgid "Use restricted software?"
-msgstr "¿Utilizar programas restringidos?"
-
-#. Type: boolean
-#. Description
-#. This template is used by the Ubuntu version of d-i.
-#. :sl2:
-#: ../apt-mirror-setup.templates-ubuntu:1001
-msgid ""
-"Some non-free software is available in packaged form. Though this software "
-"is not a part of the main distribution, standard package management tools "
-"can be used to install it. This software has varying licenses which may "
-"prevent you from using, modifying, or sharing it."
-msgstr ""
-"Algunos programas no-libres están disponibles como paquetes. Se pueden "
-"utilizar las herramientas de gestión de paquetes estándar para instalarlos "
-"aunque estos programas no forman parte de la distribución principal. Estos "
-"programas tienen licencias varias que pueden impedir que los utilice, "
-"modifique o comparta."
-
-#. Type: boolean
-#. Description
-#. This template is used by the Ubuntu version of d-i.
-#. :sl2:
-#: ../apt-mirror-setup.templates-ubuntu:2001
-msgid "Use software from the \"universe\" component?"
-msgstr "¿Utilizar programas del componente \"universe\"?"
-
-#. Type: boolean
-#. Description
-#. This template is used by the Ubuntu version of d-i.
-#. :sl2:
-#: ../apt-mirror-setup.templates-ubuntu:2001
-msgid ""
-"Some additional software is available in packaged form. This software is "
-"free and, though it is not a part of the main distribution, standard package "
-"management tools can be used to install it."
-msgstr ""
-"Algunos programas adicionales están disponibles en formato de paquete. Se "
-"pueden utilizar las herramientas de gestión de paquetes estándar para "
-"instalarlos. Aunque no forman parte de la distribución principal, estos "
-"programas son libres."
-
-#. Type: boolean
-#. Description
-#. This template is used by the Ubuntu version of d-i.
-#. :sl2:
-#: ../apt-mirror-setup.templates-ubuntu:3001
-msgid "Use software from the \"multiverse\" component?"
-msgstr "¿Utilizar programas del componente «multiverse»?"
-
-#. Type: boolean
-#. Description
-#. This template is used by the Ubuntu version of d-i.
-#. :sl2:
-#: ../apt-mirror-setup.templates-ubuntu:3001
-msgid ""
-"Some non-free software is available in packaged form. Though this software "
-"is not a part of the main distribution, standard package management tools "
-"can be used to install it. This software has varying licenses and (in some "
-"cases) patent restrictions which may prevent you from using, modifying, or "
-"sharing it."
-msgstr ""
-"Algunos programas no-libres están disponibles en formato de paquete. Se "
-"pueden utilizar las herramientas de gestión de paquetes estándar para "
-"instalarlos aunque estos programas no forman parte de la distribución "
-"principal. Estos programas tienen diversas licencias y (en algunos casos) "
-"restricciones de patentes que pueden impedir que vd. pueda utilizarlo, "
-"modificarlo o compartirlo."
-
-#. Type: boolean
-#. Description
-#. This template is used by the Ubuntu version of d-i.
-#. :sl2:
-#: ../apt-mirror-setup.templates-ubuntu:4001
-msgid "Use software from the \"partner\" repository?"
-msgstr "¿Utilizar programas del repositorio \"partner\"?"
-
-#. Type: boolean
-#. Description
-#. This template is used by the Ubuntu version of d-i.
-#. :sl2:
-#: ../apt-mirror-setup.templates-ubuntu:4001
-msgid ""
-"Some additional software is available from Canonical's \"partner\" "
-"repository. This software is not part of Ubuntu, but is offered by Canonical "
-"and the respective vendors as a service to Ubuntu users."
-msgstr ""
-"Puede obtener más programas del repositorio de los \"partner\" de Canonical. "
-"Estos programas no son parte de Ubuntu pero se ofrece por parte de Canonical "
-"y de los respectivos fabricantes de programas como un servicio a los "
-"usuarios de Ubuntu."
-
-#. Type: boolean
-#. Description
-#. This template is used by the Ubuntu version of d-i.
-#. :sl2:
-#: ../apt-mirror-setup.templates-ubuntu:5001
-msgid "Use backported software?"
-msgstr "¿Utilizar programas migrados a versiones nuevas?"
-
-#. Type: boolean
-#. Description
-#. This template is used by the Ubuntu version of d-i.
-#. :sl2:
-#: ../apt-mirror-setup.templates-ubuntu:5001
-msgid ""
-"Some software has been backported from the development tree to work with "
-"this release. Although this software has not gone through such complete "
-"testing as that contained in the release, it includes newer versions of some "
-"applications which may provide useful features."
-msgstr ""
-"Algunos programas han sido migrados a versiones más recientes utilizando la "
-"rama de desarrollo para que funcionen en esta versión. Estos programas "
-"incluyen versiones más nuevas de aplicaciones que pueden ofrecer "
-"funcionalidades interesantes aunque no han pasado pruebas tan completas como "
-"los que contiene esta versión."
