--- a/debian/po/fi.po
+++ b/debian/po/fi.po
@@ -27,9 +27,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: apt-setup@packages.debian.org\n"
-"POT-Creation-Date: 2024-05-11 20:02+0000\n"
-"PO-Revision-Date: 2022-09-16 09:23+0000\n"
-"Last-Translator: Tommi Nieminen <software@legisign.org>\n"
+"POT-Creation-Date: 2025-04-28 20:01+0000\n"
+"PO-Revision-Date: 2025-01-21 02:03+0000\n"
+"Last-Translator: Ricky Tigg <ricky.tigg@gmail.com>\n"
 "Language-Team: Finnish <debian-l10n-finnish@lists.debian.org>\n"
 "Language: fi\n"
 "MIME-Version: 1.0\n"
@@ -530,9 +530,8 @@ msgstr "Tutkitaan asennuspalvelinta..."
 #. Description
 #. :sl5:
 #: ../apt-mirror-setup.templates:2001
-#, fuzzy
 msgid "Use non-free firmware?"
-msgstr "Käytä epävapaita ohjelmistoja?"
+msgstr "Käytetäänkö ei-avointa laiteohjelmistoa?"
 
 #. Type: boolean
 #. Description
@@ -543,6 +542,10 @@ msgid ""
 "hardware components (such as Wi-Fi cards or audio chipsets), which may not "
 "function fully or at all without it."
 msgstr ""
+"Laiteohjelmisto on eräänlainen ohjelmisto, joka tarjoaa matalan tason "
+"hallinnan tiettyjä laitteistokomponentteja (kuten Wi-Fi-kortteja tai "
+"äänipiirisarjoja), jotka eivät välttämättä toimi täysin tai ollenkaan ilman "
+"sitä."
 
 #. Type: boolean
 #. Description
@@ -554,6 +557,10 @@ msgid ""
 "freedoms to use, modify, or share the software, and generally does not have "
 "source forms that you may study."
 msgstr ""
+"Vaikka ei ollenkaan osa Debiania, jotkut ei-vapaat laiteohjelmistot on tehty "
+"toimimaan Debianin kanssa. Tällä laiteohjelmistolla on erilaisia lisenssejä, "
+"jotka rajoittavat vapauttasi käyttää, muokata tai jakaa ohjelmistoa, eikä "
+"sillä yleensä ole lähdelomakkeita, joita voit tutkia."
 
 #. Type: boolean
 #. Description
@@ -561,12 +568,7 @@ msgstr ""
 #. Type: boolean
 #. Description
 #. :sl1:
-#. Type: boolean
-#. Description
-#. This template is used by the Ubuntu version of d-i.
-#. :sl2:
 #: ../apt-mirror-setup.templates:2001 ../apt-mirror-setup.templates:3001
-#: ../apt-mirror-setup.templates-ubuntu:1001
 msgid "Please choose whether you want to have it available anyway."
 msgstr "Valitse, haluatko näiden ohjelmien olevan kuitenkin asennettavissa."
 
@@ -617,26 +619,7 @@ msgstr ""
 #. Type: boolean
 #. Description
 #. :sl1:
-#. Type: boolean
-#. Description
-#. This template is used by the Ubuntu version of d-i.
-#. :sl2:
-#. Type: boolean
-#. Description
-#. This template is used by the Ubuntu version of d-i.
-#. :sl2:
-#. Type: boolean
-#. Description
-#. This template is used by the Ubuntu version of d-i.
-#. :sl2:
-#. Type: boolean
-#. Description
-#. This template is used by the Ubuntu version of d-i.
-#. :sl2:
-#: ../apt-mirror-setup.templates:4001 ../apt-mirror-setup.templates-ubuntu:2001
-#: ../apt-mirror-setup.templates-ubuntu:3001
-#: ../apt-mirror-setup.templates-ubuntu:4001
-#: ../apt-mirror-setup.templates-ubuntu:5001
+#: ../apt-mirror-setup.templates:4001
 msgid ""
 "Please choose whether you want this software to be made available to you."
 msgstr "Valitse, haluatko näiden ohjelmien olevan asennettavissa."
@@ -704,123 +687,3 @@ msgstr "Jatketaanko ilman verkkopeilipalvelinta?"
 #: ../apt-mirror-setup.templates:7001
 msgid "No network mirror was selected."
 msgstr "Verkkopeilipalvelinta ei valittu."
-
-#. Type: boolean
-#. Description
-#. This template is used by the Ubuntu version of d-i.
-#. :sl2:
-#: ../apt-mirror-setup.templates-ubuntu:1001
-msgid "Use restricted software?"
-msgstr "Käytä epävapaita ohjelmia?"
-
-#. Type: boolean
-#. Description
-#. This template is used by the Ubuntu version of d-i.
-#. :sl2:
-#: ../apt-mirror-setup.templates-ubuntu:1001
-msgid ""
-"Some non-free software is available in packaged form. Though this software "
-"is not a part of the main distribution, standard package management tools "
-"can be used to install it. This software has varying licenses which may "
-"prevent you from using, modifying, or sharing it."
-msgstr ""
-"Jotkin epävapaat ohjelmat ovat saatavilla asennuspaketteina. Vaikka nämä "
-"ohjelmat eivät kuulukaan pääjakeluun, tavanomaisia paketinhallintatyökaluja "
-"voidaan käyttää niiden asentamiseen. Näiden ohjelmien käyttöehdot "
-"vaihtelevat, mahdollisesti estäen niiden käytön, muuttamisen tai "
-"levittämisen."
-
-#. Type: boolean
-#. Description
-#. This template is used by the Ubuntu version of d-i.
-#. :sl2:
-#: ../apt-mirror-setup.templates-ubuntu:2001
-msgid "Use software from the \"universe\" component?"
-msgstr "Käytetäänkö ohjelmia universe-jakelusta?"
-
-#. Type: boolean
-#. Description
-#. This template is used by the Ubuntu version of d-i.
-#. :sl2:
-#: ../apt-mirror-setup.templates-ubuntu:2001
-msgid ""
-"Some additional software is available in packaged form. This software is "
-"free and, though it is not a part of the main distribution, standard package "
-"management tools can be used to install it."
-msgstr ""
-"Joitakin lisäohjelmia on saatavilla asennuspaketteina. Nämä ohjelmat ovat "
-"vapaita. Vaikka ne eivät kuulukaan pääjakeluun, tavanomaisia "
-"paketinhallintatyökaluja voidaan käyttää niiden asentamiseen."
-
-#. Type: boolean
-#. Description
-#. This template is used by the Ubuntu version of d-i.
-#. :sl2:
-#: ../apt-mirror-setup.templates-ubuntu:3001
-msgid "Use software from the \"multiverse\" component?"
-msgstr "Käytetäänkö ohjelmia ”multiverse”-jakelusta?"
-
-#. Type: boolean
-#. Description
-#. This template is used by the Ubuntu version of d-i.
-#. :sl2:
-#: ../apt-mirror-setup.templates-ubuntu:3001
-msgid ""
-"Some non-free software is available in packaged form. Though this software "
-"is not a part of the main distribution, standard package management tools "
-"can be used to install it. This software has varying licenses and (in some "
-"cases) patent restrictions which may prevent you from using, modifying, or "
-"sharing it."
-msgstr ""
-"Jotkin epävapaat ohjelmat ovat saatavilla asennuspaketteina. Vaikka nämä "
-"ohjelmat eivät kuulukaan pääjakeluun, tavanomaisia paketinhallintatyökaluja "
-"voidaan käyttää niiden asentamiseen. Näiden ohjelmien käyttöehdot ja "
-"mahdolliset patentit vaihtelevat, mahdollisesti estäen niiden käytön, "
-"muuttamisen tai levittämisen."
-
-#. Type: boolean
-#. Description
-#. This template is used by the Ubuntu version of d-i.
-#. :sl2:
-#: ../apt-mirror-setup.templates-ubuntu:4001
-msgid "Use software from the \"partner\" repository?"
-msgstr "Käytetäänkö ohjelmia ”kumppani”-varastosta?"
-
-#. Type: boolean
-#. Description
-#. This template is used by the Ubuntu version of d-i.
-#. :sl2:
-#: ../apt-mirror-setup.templates-ubuntu:4001
-msgid ""
-"Some additional software is available from Canonical's \"partner\" "
-"repository. This software is not part of Ubuntu, but is offered by Canonical "
-"and the respective vendors as a service to Ubuntu users."
-msgstr ""
-"Joitain lisäohjelmia on saatavilla Canonicalin ”kumppani”-varastosta. Tämä "
-"varasto ei ole Ubuntun osa, mutta Canonical ja vastaavat toimittajat "
-"tarjoavat sen palveluna Ubuntun käyttäjille."
-
-#. Type: boolean
-#. Description
-#. This template is used by the Ubuntu version of d-i.
-#. :sl2:
-#: ../apt-mirror-setup.templates-ubuntu:5001
-msgid "Use backported software?"
-msgstr ""
-"Käytetäänkö vanhaan järjestelmäversioon sovitettuja ohjelmia (backported)?"
-
-#. Type: boolean
-#. Description
-#. This template is used by the Ubuntu version of d-i.
-#. :sl2:
-#: ../apt-mirror-setup.templates-ubuntu:5001
-msgid ""
-"Some software has been backported from the development tree to work with "
-"this release. Although this software has not gone through such complete "
-"testing as that contained in the release, it includes newer versions of some "
-"applications which may provide useful features."
-msgstr ""
-"Joitakin ohjelmia on sovitettu kehitysversiosta toimimaan tässä julkaisussa. "
-"Vaikkakaan näitä ohjelmia ei ole testattu yhtä perusteellisesti kuin "
-"julkaisun ohjelmia, niissä on joistakin sovelluksista uudemmat versiot, "
-"jotka saattavat tarjota hyödyllisiä ominaisuuksia."
