--- a/debian/po/it.po
+++ b/debian/po/it.po
@@ -40,8 +40,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: apt-setup@packages.debian.org\n"
-"POT-Creation-Date: 2024-05-11 20:02+0000\n"
-"PO-Revision-Date: 2020-10-26 09:14+0100\n"
+"POT-Creation-Date: 2025-04-28 20:01+0000\n"
+"PO-Revision-Date: 2025-01-23 11:57+0100\n"
 "Last-Translator: Milo Casagrande <milo@milo.name>\n"
 "Language-Team: Italian <tp@lists.linux.it>\n"
 "Language: it\n"
@@ -511,7 +511,7 @@ msgid ""
 "selection of packages, some may be missing."
 msgstr ""
 "Si sta installando da un'immagine DVD. Anche se questa contiene una grande "
-"quantità di pacchetti, alcuni potrebbe mancare"
+"quantità di pacchetti, alcuni potrebbe mancare."
 
 #. Type: text
 #. Description
@@ -549,9 +549,8 @@ msgstr "Analisi del mirror..."
 #. Description
 #. :sl5:
 #: ../apt-mirror-setup.templates:2001
-#, fuzzy
 msgid "Use non-free firmware?"
-msgstr "Usare il software non libero?"
+msgstr "Usare il firmware non libero?"
 
 #. Type: boolean
 #. Description
@@ -562,6 +561,9 @@ msgid ""
 "hardware components (such as Wi-Fi cards or audio chipsets), which may not "
 "function fully or at all without it."
 msgstr ""
+"Un firmware è un tipo di software che fornisce un controllo di basso livello "
+"a certi componenti hardware (come schede Wi-Fi o chip audio), i quali non "
+"potrebbero funzionare per nulla senza di esso."
 
 #. Type: boolean
 #. Description
@@ -573,6 +575,10 @@ msgid ""
 "freedoms to use, modify, or share the software, and generally does not have "
 "source forms that you may study."
 msgstr ""
+"Anche se non completamente parte di Debian, alcuni firmware non liberi sono "
+"stati modificati per funzionare su Debian. Questo firmware ha varie licenze "
+"che limitano la libertà di usare, modificare o condividere il software, e in "
+"generale non ha il formato sorgente che si possa studiare."
 
 #. Type: boolean
 #. Description
@@ -580,12 +586,7 @@ msgstr ""
 #. Type: boolean
 #. Description
 #. :sl1:
-#. Type: boolean
-#. Description
-#. This template is used by the Ubuntu version of d-i.
-#. :sl2:
 #: ../apt-mirror-setup.templates:2001 ../apt-mirror-setup.templates:3001
-#: ../apt-mirror-setup.templates-ubuntu:1001
 msgid "Please choose whether you want to have it available anyway."
 msgstr "Scegliere se si vuole che questo software sia reso disponibile."
 
@@ -637,26 +638,7 @@ msgstr ""
 #. Type: boolean
 #. Description
 #. :sl1:
-#. Type: boolean
-#. Description
-#. This template is used by the Ubuntu version of d-i.
-#. :sl2:
-#. Type: boolean
-#. Description
-#. This template is used by the Ubuntu version of d-i.
-#. :sl2:
-#. Type: boolean
-#. Description
-#. This template is used by the Ubuntu version of d-i.
-#. :sl2:
-#. Type: boolean
-#. Description
-#. This template is used by the Ubuntu version of d-i.
-#. :sl2:
-#: ../apt-mirror-setup.templates:4001 ../apt-mirror-setup.templates-ubuntu:2001
-#: ../apt-mirror-setup.templates-ubuntu:3001
-#: ../apt-mirror-setup.templates-ubuntu:4001
-#: ../apt-mirror-setup.templates-ubuntu:5001
+#: ../apt-mirror-setup.templates:4001
 msgid ""
 "Please choose whether you want this software to be made available to you."
 msgstr "Scegliere se si vuole che questo software sia reso disponibile."
@@ -725,122 +707,3 @@ msgstr "Continuare senza un mirror di rete?"
 #: ../apt-mirror-setup.templates:7001
 msgid "No network mirror was selected."
 msgstr "Non è stato selezionato alcun mirror di rete."
-
-#. Type: boolean
-#. Description
-#. This template is used by the Ubuntu version of d-i.
-#. :sl2:
-#: ../apt-mirror-setup.templates-ubuntu:1001
-msgid "Use restricted software?"
-msgstr "Usare il software «restricted»?"
-
-#. Type: boolean
-#. Description
-#. This template is used by the Ubuntu version of d-i.
-#. :sl2:
-#: ../apt-mirror-setup.templates-ubuntu:1001
-msgid ""
-"Some non-free software is available in packaged form. Though this software "
-"is not a part of the main distribution, standard package management tools "
-"can be used to install it. This software has varying licenses which may "
-"prevent you from using, modifying, or sharing it."
-msgstr ""
-"Alcuni software non liberi sono disponibili sotto forma di pacchetto. Anche "
-"se tale software non fa parte della distribuzione, è possibile usare i "
-"normali strumenti di gestione dei pacchetti per installarlo. Le licenze a "
-"cui è soggetto sono molteplici e in alcuni casi presentano delle restrizioni "
-"sull'uso, sulla modifica o sulla redistribuzione."
-
-#. Type: boolean
-#. Description
-#. This template is used by the Ubuntu version of d-i.
-#. :sl2:
-#: ../apt-mirror-setup.templates-ubuntu:2001
-msgid "Use software from the \"universe\" component?"
-msgstr "Usare il software dal componente «universe»?"
-
-#. Type: boolean
-#. Description
-#. This template is used by the Ubuntu version of d-i.
-#. :sl2:
-#: ../apt-mirror-setup.templates-ubuntu:2001
-msgid ""
-"Some additional software is available in packaged form. This software is "
-"free and, though it is not a part of the main distribution, standard package "
-"management tools can be used to install it."
-msgstr ""
-"Alcuni software aggiuntivi sono disponibili sotto forma di pacchetto. Anche "
-"se tale software non fa parte della distribuzione, è possibile usare i "
-"normali strumenti di gestione dei pacchetti per installarlo."
-
-#. Type: boolean
-#. Description
-#. This template is used by the Ubuntu version of d-i.
-#. :sl2:
-#: ../apt-mirror-setup.templates-ubuntu:3001
-msgid "Use software from the \"multiverse\" component?"
-msgstr "Usare il software dal componente «multiverse»?"
-
-#. Type: boolean
-#. Description
-#. This template is used by the Ubuntu version of d-i.
-#. :sl2:
-#: ../apt-mirror-setup.templates-ubuntu:3001
-msgid ""
-"Some non-free software is available in packaged form. Though this software "
-"is not a part of the main distribution, standard package management tools "
-"can be used to install it. This software has varying licenses and (in some "
-"cases) patent restrictions which may prevent you from using, modifying, or "
-"sharing it."
-msgstr ""
-"Alcuni software non liberi sono disponibili sotto forma di pacchetto. Anche "
-"se tale software non fa parte della distribuzione, è possibile usare i "
-"normali strumenti di gestione dei pacchetti per installarlo. Le licenze a "
-"cui è soggetto sono molteplici e in alcuni casi presentano delle restrizioni "
-"sull'uso, sulla modifica o sulla redistribuzione."
-
-#. Type: boolean
-#. Description
-#. This template is used by the Ubuntu version of d-i.
-#. :sl2:
-#: ../apt-mirror-setup.templates-ubuntu:4001
-msgid "Use software from the \"partner\" repository?"
-msgstr "Usare il software dal repository dei partner?"
-
-#. Type: boolean
-#. Description
-#. This template is used by the Ubuntu version of d-i.
-#. :sl2:
-#: ../apt-mirror-setup.templates-ubuntu:4001
-msgid ""
-"Some additional software is available from Canonical's \"partner\" "
-"repository. This software is not part of Ubuntu, but is offered by Canonical "
-"and the respective vendors as a service to Ubuntu users."
-msgstr ""
-"Alcuni software aggiuntivi sono disponibili dai repository dei partner di "
-"Canonical. Anche se tale software non fa parte di Ubuntu, viene offerto da "
-"Canonical e dai rispettivi fornitori come un servizio agli utenti di Ubuntu."
-
-#. Type: boolean
-#. Description
-#. This template is used by the Ubuntu version of d-i.
-#. :sl2:
-#: ../apt-mirror-setup.templates-ubuntu:5001
-msgid "Use backported software?"
-msgstr "Usare il software «backported»?"
-
-#. Type: boolean
-#. Description
-#. This template is used by the Ubuntu version of d-i.
-#. :sl2:
-#: ../apt-mirror-setup.templates-ubuntu:5001
-msgid ""
-"Some software has been backported from the development tree to work with "
-"this release. Although this software has not gone through such complete "
-"testing as that contained in the release, it includes newer versions of some "
-"applications which may provide useful features."
-msgstr ""
-"Alcuni software disponibili nella versione di sviluppo sono stati "
-"ricompilati per funzionare con questa versione. Nonostante questo software "
-"non abbia ancora superato tutti i test necessari per il rilascio, si tratta "
-"di applicazioni più aggiornate che possono tornare utili."
