--- a/debian/po/lt.po
+++ b/debian/po/lt.po
@@ -29,17 +29,16 @@ msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: apt-setup@packages.debian.org\n"
-"POT-Creation-Date: 2024-05-11 20:02+0000\n"
-"PO-Revision-Date: 2023-09-28 16:03+0000\n"
+"POT-Creation-Date: 2025-04-28 20:01+0000\n"
+"PO-Revision-Date: 2025-03-09 19:32+0000\n"
 "Last-Translator: Rimas Kudelis <rimas@kudelis.lt>\n"
 "Language-Team: Lithuanian <komp_lt@konferencijos.lt>\n"
 "Language: lt\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=(n % 10 == 1 && (n % 100 < 11 || n % 100 > "
-"19)) ? 0 : ((n % 10 >= 2 && n % 10 <= 9 && (n % 100 < 11 || n % 100 > 19)) ? "
-"1 : 2);\n"
+"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && (n"
+"%100<10 || n%100>=20) ? 1 : 2);\n"
 
 #. Type: text
 #. Description
@@ -544,6 +543,11 @@ msgid ""
 "hardware components (such as Wi-Fi cards or audio chipsets), which may not "
 "function fully or at all without it."
 msgstr ""
+"Aparatinė programinė įranga – tai programinė įranga, suteikianti galimybę "
+"žemame lygyje valdyti kai kuriuos aparatinius komponentus (kaip antai "
+"belaidžio tinklo plokštės ar garso įrenginiai). Nanaudojant aparatinės "
+"programinės įrangos, šie įrenginiai gali veikti nevisiškai, arba neveikti "
+"išvis."
 
 #. Type: boolean
 #. Description
@@ -555,6 +559,11 @@ msgid ""
 "freedoms to use, modify, or share the software, and generally does not have "
 "source forms that you may study."
 msgstr ""
+"Nors nuosavybinė aparatinė programinė įranga nėra „Debian“ dalis, kai "
+"kuriais atvejais ji pritaikoma veikti su „Debian“. Ši aparatinė programinė "
+"įranga platinama įvairių licencijų, paprastai ribojančių jūsų teisę ja "
+"naudotis, modifikuoti, ar dalintis, sąlygomis, ir paprastai nepateikiama su "
+"studijavimui tinkamais pirminiais tekstais."
 
 #. Type: boolean
 #. Description
@@ -562,12 +571,7 @@ msgstr ""
 #. Type: boolean
 #. Description
 #. :sl1:
-#. Type: boolean
-#. Description
-#. This template is used by the Ubuntu version of d-i.
-#. :sl2:
 #: ../apt-mirror-setup.templates:2001 ../apt-mirror-setup.templates:3001
-#: ../apt-mirror-setup.templates-ubuntu:1001
 msgid "Please choose whether you want to have it available anyway."
 msgstr ""
 "Pasirinkite, ar vis tik norite, kad ši programinė įranga būtų Jums prieinama."
@@ -620,26 +624,7 @@ msgstr ""
 #. Type: boolean
 #. Description
 #. :sl1:
-#. Type: boolean
-#. Description
-#. This template is used by the Ubuntu version of d-i.
-#. :sl2:
-#. Type: boolean
-#. Description
-#. This template is used by the Ubuntu version of d-i.
-#. :sl2:
-#. Type: boolean
-#. Description
-#. This template is used by the Ubuntu version of d-i.
-#. :sl2:
-#. Type: boolean
-#. Description
-#. This template is used by the Ubuntu version of d-i.
-#. :sl2:
-#: ../apt-mirror-setup.templates:4001 ../apt-mirror-setup.templates-ubuntu:2001
-#: ../apt-mirror-setup.templates-ubuntu:3001
-#: ../apt-mirror-setup.templates-ubuntu:4001
-#: ../apt-mirror-setup.templates-ubuntu:5001
+#: ../apt-mirror-setup.templates:4001
 msgid ""
 "Please choose whether you want this software to be made available to you."
 msgstr ""
@@ -709,123 +694,3 @@ msgstr "Ar tęsti be paketų archyvo serverio tinkle?"
 #: ../apt-mirror-setup.templates:7001
 msgid "No network mirror was selected."
 msgstr "Nepasirinktas paketų archyvo serveris tinkle."
-
-#. Type: boolean
-#. Description
-#. This template is used by the Ubuntu version of d-i.
-#. :sl2:
-#: ../apt-mirror-setup.templates-ubuntu:1001
-msgid "Use restricted software?"
-msgstr "Ar naudoti apribotą (restricted) programinę įrangą?"
-
-#. Type: boolean
-#. Description
-#. This template is used by the Ubuntu version of d-i.
-#. :sl2:
-#: ../apt-mirror-setup.templates-ubuntu:1001
-msgid ""
-"Some non-free software is available in packaged form. Though this software "
-"is not a part of the main distribution, standard package management tools "
-"can be used to install it. This software has varying licenses which may "
-"prevent you from using, modifying, or sharing it."
-msgstr ""
-"Tam tikra, ne laisva programinė įranga yra prieinama paketų pavidalu. Nors "
-"ši programinė įranga nelaikoma distributyvo dalimi, jos įdiegimui gali būti "
-"naudojami standartiniai paketų tvarkymo įrankiai. Šie paketai turi įvairias "
-"licencijas, kurios gali trukdyti Jums naudoti, modifikuoti arba perduoti "
-"juos."
-
-#. Type: boolean
-#. Description
-#. This template is used by the Ubuntu version of d-i.
-#. :sl2:
-#: ../apt-mirror-setup.templates-ubuntu:2001
-msgid "Use software from the \"universe\" component?"
-msgstr "Ar naudoti programinę įrangą iš \"universe\" šakos?"
-
-#. Type: boolean
-#. Description
-#. This template is used by the Ubuntu version of d-i.
-#. :sl2:
-#: ../apt-mirror-setup.templates-ubuntu:2001
-msgid ""
-"Some additional software is available in packaged form. This software is "
-"free and, though it is not a part of the main distribution, standard package "
-"management tools can be used to install it."
-msgstr ""
-"Tam tikra papildoma programinė įranga yra prieinama paketų pavidalu. Ši "
-"programinė įranga yra laisva, ir nors ji nėra pagrindinio distributyvo "
-"dalis, jos įdiegimui gali būti naudojami standartiniai paketų tvarkymo "
-"įrankiai."
-
-#. Type: boolean
-#. Description
-#. This template is used by the Ubuntu version of d-i.
-#. :sl2:
-#: ../apt-mirror-setup.templates-ubuntu:3001
-msgid "Use software from the \"multiverse\" component?"
-msgstr "Ar naudoti programinę įrangą iš \"multiverse\" šakos?"
-
-#. Type: boolean
-#. Description
-#. This template is used by the Ubuntu version of d-i.
-#. :sl2:
-#: ../apt-mirror-setup.templates-ubuntu:3001
-msgid ""
-"Some non-free software is available in packaged form. Though this software "
-"is not a part of the main distribution, standard package management tools "
-"can be used to install it. This software has varying licenses and (in some "
-"cases) patent restrictions which may prevent you from using, modifying, or "
-"sharing it."
-msgstr ""
-"Tam tikra, ne laisva programinė įranga yra prieinama paketų pavidalu. Nors "
-"ši programinė įranga nelaikoma distributyvo dalimi, jos įdiegimui gali būti "
-"naudojami standartiniai paketų tvarkymo įrankiai. Šie paketai turi įvairias "
-"licencijas ir (tam tikrais atvejais) patentinius apribojimus, kurie gali "
-"trukdyti Jums naudoti, modifikuoti arba perduoti juos."
-
-#. Type: boolean
-#. Description
-#. This template is used by the Ubuntu version of d-i.
-#. :sl2:
-#: ../apt-mirror-setup.templates-ubuntu:4001
-msgid "Use software from the \"partner\" repository?"
-msgstr "Ar naudoti programinę įrangą iš \"partner\" šakos?"
-
-#. Type: boolean
-#. Description
-#. This template is used by the Ubuntu version of d-i.
-#. :sl2:
-#: ../apt-mirror-setup.templates-ubuntu:4001
-msgid ""
-"Some additional software is available from Canonical's \"partner\" "
-"repository. This software is not part of Ubuntu, but is offered by Canonical "
-"and the respective vendors as a service to Ubuntu users."
-msgstr ""
-"Kai kurios papildomos programinės įrangos galima rasti Canonical \"partneris"
-"\" saugykloje. Ši programinė įranga nėra Ubuntu dalis, tačiau kompanija "
-"Canonical ir atitinkami tiekėjai siūlo tai kaip paslaugą Ubuntu naudotojams."
-
-#. Type: boolean
-#. Description
-#. This template is used by the Ubuntu version of d-i.
-#. :sl2:
-#: ../apt-mirror-setup.templates-ubuntu:5001
-msgid "Use backported software?"
-msgstr "Ar naudoti palaikomojo pernešimo (backported) programinę įrangą?"
-
-#. Type: boolean
-#. Description
-#. This template is used by the Ubuntu version of d-i.
-#. :sl2:
-#: ../apt-mirror-setup.templates-ubuntu:5001
-msgid ""
-"Some software has been backported from the development tree to work with "
-"this release. Although this software has not gone through such complete "
-"testing as that contained in the release, it includes newer versions of some "
-"applications which may provide useful features."
-msgstr ""
-"Tam tikra programinė įranga buvo pernešta iš projektuojamos šakos į šią "
-"laidą. Nors ji nėra praėjusi pilno testavimo ciklo, kaip kitos programos "
-"šioje laidoje, tačiau turi naujesnes versijas ir gali turėti naudingų "
-"savybių."
