--- a/debian/po/lv.po
+++ b/debian/po/lv.po
@@ -29,9 +29,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: lv\n"
 "Report-Msgid-Bugs-To: apt-setup@packages.debian.org\n"
-"POT-Creation-Date: 2024-05-11 20:02+0000\n"
-"PO-Revision-Date: 2024-10-16 15:16+0000\n"
-"Last-Translator: GGLVXD <85647114+GGLVXD@users.noreply.github.com>\n"
+"POT-Creation-Date: 2025-04-28 20:01+0000\n"
+"PO-Revision-Date: 2025-05-05 03:58+0000\n"
+"Last-Translator: Coool <coool@mail.lv>\n"
 "Language-Team: Latvian <lata-l10n@googlegroups.com>\n"
 "Language: lv\n"
 "MIME-Version: 1.0\n"
@@ -533,7 +533,7 @@ msgstr "Skenē spoguļserveri..."
 #. :sl5:
 #: ../apt-mirror-setup.templates:2001
 msgid "Use non-free firmware?"
-msgstr "Lietot licenzēto programmatūru?"
+msgstr "Lietot licenzēto aparātprogrammatūru?"
 
 #. Type: boolean
 #. Description
@@ -544,7 +544,7 @@ msgid ""
 "hardware components (such as Wi-Fi cards or audio chipsets), which may not "
 "function fully or at all without it."
 msgstr ""
-"Programmaparatūra ir sava veida programmatūra, kas nodrošina noteiktu "
+"Aparātprogrammatūra ir sava veida programmatūra, kas nodrošina noteiktu "
 "aparatūras komponentu (piemēram, Wi-Fi karšu vai audio mikroshēmojumu) zema "
 "līmeņa kontroli, kas bez tās var nedarboties pilnībā vai vispār."
 
@@ -569,12 +569,7 @@ msgstr ""
 #. Type: boolean
 #. Description
 #. :sl1:
-#. Type: boolean
-#. Description
-#. This template is used by the Ubuntu version of d-i.
-#. :sl2:
 #: ../apt-mirror-setup.templates:2001 ../apt-mirror-setup.templates:3001
-#: ../apt-mirror-setup.templates-ubuntu:1001
 msgid "Please choose whether you want to have it available anyway."
 msgstr "Izvēlieties, vai tai tomēr jābūt pieejamai."
 
@@ -626,26 +621,7 @@ msgstr ""
 #. Type: boolean
 #. Description
 #. :sl1:
-#. Type: boolean
-#. Description
-#. This template is used by the Ubuntu version of d-i.
-#. :sl2:
-#. Type: boolean
-#. Description
-#. This template is used by the Ubuntu version of d-i.
-#. :sl2:
-#. Type: boolean
-#. Description
-#. This template is used by the Ubuntu version of d-i.
-#. :sl2:
-#. Type: boolean
-#. Description
-#. This template is used by the Ubuntu version of d-i.
-#. :sl2:
-#: ../apt-mirror-setup.templates:4001 ../apt-mirror-setup.templates-ubuntu:2001
-#: ../apt-mirror-setup.templates-ubuntu:3001
-#: ../apt-mirror-setup.templates-ubuntu:4001
-#: ../apt-mirror-setup.templates-ubuntu:5001
+#: ../apt-mirror-setup.templates:4001
 msgid ""
 "Please choose whether you want this software to be made available to you."
 msgstr "Izvēlieties, vai šai programmatūrai jābūt pieejamai."
@@ -713,120 +689,3 @@ msgstr "Turpināt bez tīkla spoguļservera?"
 #: ../apt-mirror-setup.templates:7001
 msgid "No network mirror was selected."
 msgstr "Nav izvēlēts tīkla spoguļserveris."
-
-#. Type: boolean
-#. Description
-#. This template is used by the Ubuntu version of d-i.
-#. :sl2:
-#: ../apt-mirror-setup.templates-ubuntu:1001
-msgid "Use restricted software?"
-msgstr "Lietot ierobežoto programmatūru?"
-
-#. Type: boolean
-#. Description
-#. This template is used by the Ubuntu version of d-i.
-#. :sl2:
-#: ../apt-mirror-setup.templates-ubuntu:1001
-msgid ""
-"Some non-free software is available in packaged form. Though this software "
-"is not a part of the main distribution, standard package management tools "
-"can be used to install it. This software has varying licenses which may "
-"prevent you from using, modifying, or sharing it."
-msgstr ""
-"Dažas nebrīvās programmas ir pieejamas sapakotā formā. Lai gan šī "
-"programmatūra nav galvenās distribūcijas daļa, standarta pakotņu vadības "
-"rīkus var izmantot, lai to instalētu. Šai programmatūrai ir dažādas "
-"licences, kas var aizliegt jums to lietot, modificēt vai izplatīt."
-
-#. Type: boolean
-#. Description
-#. This template is used by the Ubuntu version of d-i.
-#. :sl2:
-#: ../apt-mirror-setup.templates-ubuntu:2001
-msgid "Use software from the \"universe\" component?"
-msgstr "Lietot programmatūru no \"universe\" komponentes?"
-
-#. Type: boolean
-#. Description
-#. This template is used by the Ubuntu version of d-i.
-#. :sl2:
-#: ../apt-mirror-setup.templates-ubuntu:2001
-msgid ""
-"Some additional software is available in packaged form. This software is "
-"free and, though it is not a part of the main distribution, standard package "
-"management tools can be used to install it."
-msgstr ""
-"Papildu programmatūra ir pieejama sapakotā veidā. Šī programmatūra ir brīva "
-"un, lai gan tā nav galvenās distribūcijas daļa, to var instalēt, izmantojot "
-"standarta pakotņu vadības rīkus."
-
-#. Type: boolean
-#. Description
-#. This template is used by the Ubuntu version of d-i.
-#. :sl2:
-#: ../apt-mirror-setup.templates-ubuntu:3001
-msgid "Use software from the \"multiverse\" component?"
-msgstr "Lietot programmatūru no \"multiverse\" komponentes?"
-
-#. Type: boolean
-#. Description
-#. This template is used by the Ubuntu version of d-i.
-#. :sl2:
-#: ../apt-mirror-setup.templates-ubuntu:3001
-msgid ""
-"Some non-free software is available in packaged form. Though this software "
-"is not a part of the main distribution, standard package management tools "
-"can be used to install it. This software has varying licenses and (in some "
-"cases) patent restrictions which may prevent you from using, modifying, or "
-"sharing it."
-msgstr ""
-"Dažas nebrīvās programmas ir pieejamas sapakotā formā. Lai gan šī "
-"programmatūra nav galvenās distribūcijas daļa, to var instalēt, izmantojot "
-"standarta pakotņu vadības rīkus. Šai programmatūrai ir dažādas licences, kas "
-"var aizliegt jums to lietot, modificēt vai izplatīt."
-
-#. Type: boolean
-#. Description
-#. This template is used by the Ubuntu version of d-i.
-#. :sl2:
-#: ../apt-mirror-setup.templates-ubuntu:4001
-msgid "Use software from the \"partner\" repository?"
-msgstr "Izmantot programmatūru no \"partneru\" krātuves?"
-
-#. Type: boolean
-#. Description
-#. This template is used by the Ubuntu version of d-i.
-#. :sl2:
-#: ../apt-mirror-setup.templates-ubuntu:4001
-msgid ""
-"Some additional software is available from Canonical's \"partner\" "
-"repository. This software is not part of Ubuntu, but is offered by Canonical "
-"and the respective vendors as a service to Ubuntu users."
-msgstr ""
-"Papildus programmatūra ir pieejama no Canonical \"partneru\" krātuves. Šī "
-"programmatūra nav daļa no Ubuntu, bet Canonical un partneri to piedāvā kā "
-"pakalpojumu Ubuntu lietotājiem."
-
-#. Type: boolean
-#. Description
-#. This template is used by the Ubuntu version of d-i.
-#. :sl2:
-#: ../apt-mirror-setup.templates-ubuntu:5001
-msgid "Use backported software?"
-msgstr "Lietot atpakaļpielāgotu programmatūru?"
-
-#. Type: boolean
-#. Description
-#. This template is used by the Ubuntu version of d-i.
-#. :sl2:
-#: ../apt-mirror-setup.templates-ubuntu:5001
-msgid ""
-"Some software has been backported from the development tree to work with "
-"this release. Although this software has not gone through such complete "
-"testing as that contained in the release, it includes newer versions of some "
-"applications which may provide useful features."
-msgstr ""
-"Dažas programmas ir ņemtas no jaunākajām izstrādes versijām un pārveidotas, "
-"lai tās spētu darboties šajā laidienā. Lai gan šāda programmatūra nav "
-"izgājusi tādu pašu testēšanu kā laidienā iekļautā, tajā ir atrodamas dažu "
-"programmu jaunākas versijas, kas varētu piedāvāt noderīgas funkcijas."
