--- a/debian/po/zh_TW.po
+++ b/debian/po/zh_TW.po
@@ -33,9 +33,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: apt-setup@packages.debian.org\n"
-"POT-Creation-Date: 2024-05-11 20:02+0000\n"
-"PO-Revision-Date: 2024-05-10 13:52+0000\n"
-"Last-Translator: yubike <coby2023t@gmail.com>\n"
+"POT-Creation-Date: 2025-04-28 20:01+0000\n"
+"PO-Revision-Date: 2025-01-27 20:15+0000\n"
+"Last-Translator: reimu105 <peter112548@gmail.com>\n"
 "Language-Team: Debian-user in Chinese [Big5] <debian-chinese-big5@lists."
 "debian.org>\n"
 "Language: zh_TW\n"
@@ -527,6 +527,8 @@ msgid ""
 "hardware components (such as Wi-Fi cards or audio chipsets), which may not "
 "function fully or at all without it."
 msgstr ""
+"韌體是一種對某些硬體組件（例如 Wi-Fi 卡或音訊晶片組）提供低階控制的軟體，如果"
+"沒有韌體，這些組件可能無法完全運作或根本無法運作。"
 
 #. Type: boolean
 #. Description
@@ -538,6 +540,9 @@ msgid ""
 "freedoms to use, modify, or share the software, and generally does not have "
 "source forms that you may study."
 msgstr ""
+"儘管不是 Debian 的一部分，但一些非自由韌體已經可以與 Debian 相容。該韌體具有"
+"不同的許可證，限制您使用、修改或共享軟體的自由，並且通常沒有您可以研究的來源"
+"形式。"
 
 #. Type: boolean
 #. Description
@@ -545,12 +550,7 @@ msgstr ""
 #. Type: boolean
 #. Description
 #. :sl1:
-#. Type: boolean
-#. Description
-#. This template is used by the Ubuntu version of d-i.
-#. :sl2:
 #: ../apt-mirror-setup.templates:2001 ../apt-mirror-setup.templates:3001
-#: ../apt-mirror-setup.templates-ubuntu:1001
 msgid "Please choose whether you want to have it available anyway."
 msgstr "請您選擇是否無論如何還是要使用它們。"
 
@@ -599,26 +599,7 @@ msgstr ""
 #. Type: boolean
 #. Description
 #. :sl1:
-#. Type: boolean
-#. Description
-#. This template is used by the Ubuntu version of d-i.
-#. :sl2:
-#. Type: boolean
-#. Description
-#. This template is used by the Ubuntu version of d-i.
-#. :sl2:
-#. Type: boolean
-#. Description
-#. This template is used by the Ubuntu version of d-i.
-#. :sl2:
-#. Type: boolean
-#. Description
-#. This template is used by the Ubuntu version of d-i.
-#. :sl2:
-#: ../apt-mirror-setup.templates:4001 ../apt-mirror-setup.templates-ubuntu:2001
-#: ../apt-mirror-setup.templates-ubuntu:3001
-#: ../apt-mirror-setup.templates-ubuntu:4001
-#: ../apt-mirror-setup.templates-ubuntu:5001
+#: ../apt-mirror-setup.templates:4001
 msgid ""
 "Please choose whether you want this software to be made available to you."
 msgstr "請您選擇是否想要使用這些軟體。"
@@ -685,115 +666,3 @@ msgstr "是否不使用網路鏡像站並繼續進行？"
 #: ../apt-mirror-setup.templates:7001
 msgid "No network mirror was selected."
 msgstr "未選取任何的網路鏡像站。"
-
-#. Type: boolean
-#. Description
-#. This template is used by the Ubuntu version of d-i.
-#. :sl2:
-#: ../apt-mirror-setup.templates-ubuntu:1001
-msgid "Use restricted software?"
-msgstr "是否使用 restricted 軟體？"
-
-#. Type: boolean
-#. Description
-#. This template is used by the Ubuntu version of d-i.
-#. :sl2:
-#: ../apt-mirror-setup.templates-ubuntu:1001
-msgid ""
-"Some non-free software is available in packaged form. Though this software "
-"is not a part of the main distribution, standard package management tools "
-"can be used to install it. This software has varying licenses which may "
-"prevent you from using, modifying, or sharing it."
-msgstr ""
-"有些 non-free 的軟體也能夠以套件的方式取得，雖然這些軟體並不包含於主要的發行"
-"版本中，但還是可以使用標準的套件管理工具來安裝它們。這些軟體都有其不同的使用"
-"許可權，可能會禁止您使用、修改或將它們分享出來。"
-
-#. Type: boolean
-#. Description
-#. This template is used by the Ubuntu version of d-i.
-#. :sl2:
-#: ../apt-mirror-setup.templates-ubuntu:2001
-msgid "Use software from the \"universe\" component?"
-msgstr "是否使用 universe 軟體？"
-
-#. Type: boolean
-#. Description
-#. This template is used by the Ubuntu version of d-i.
-#. :sl2:
-#: ../apt-mirror-setup.templates-ubuntu:2001
-msgid ""
-"Some additional software is available in packaged form. This software is "
-"free and, though it is not a part of the main distribution, standard package "
-"management tools can be used to install it."
-msgstr ""
-"一些其它的軟體也能夠以套件的方式取得，雖然這些軟體是自由軟體，但不包含於主要"
-"的發行版本中，但還是可以使用標準的套件管理工具來安裝它們。"
-
-#. Type: boolean
-#. Description
-#. This template is used by the Ubuntu version of d-i.
-#. :sl2:
-#: ../apt-mirror-setup.templates-ubuntu:3001
-msgid "Use software from the \"multiverse\" component?"
-msgstr "是否使用 multiverse 軟體？"
-
-#. Type: boolean
-#. Description
-#. This template is used by the Ubuntu version of d-i.
-#. :sl2:
-#: ../apt-mirror-setup.templates-ubuntu:3001
-msgid ""
-"Some non-free software is available in packaged form. Though this software "
-"is not a part of the main distribution, standard package management tools "
-"can be used to install it. This software has varying licenses and (in some "
-"cases) patent restrictions which may prevent you from using, modifying, or "
-"sharing it."
-msgstr ""
-"有些 non-free 的軟體也能夠以套件的方式取得，雖然這些軟體並不包含於主要的發行"
-"版本中，但還是可以使用標準的套件管理工具來安裝它們。這些軟體都有其不同的使用"
-"許可權及 (部份受到) 專利限制，可能會禁止您使用、修改或將它們分享出來。"
-
-#. Type: boolean
-#. Description
-#. This template is used by the Ubuntu version of d-i.
-#. :sl2:
-#: ../apt-mirror-setup.templates-ubuntu:4001
-msgid "Use software from the \"partner\" repository?"
-msgstr "是否使用來自 \"partner\" 的檔案庫所提供的軟體？"
-
-#. Type: boolean
-#. Description
-#. This template is used by the Ubuntu version of d-i.
-#. :sl2:
-#: ../apt-mirror-setup.templates-ubuntu:4001
-msgid ""
-"Some additional software is available from Canonical's \"partner\" "
-"repository. This software is not part of Ubuntu, but is offered by Canonical "
-"and the respective vendors as a service to Ubuntu users."
-msgstr ""
-"有些額外軟體可由 Canonical 的 \"partner\" 檔案庫取得。這些軟體並不是 Ubuntu "
-"的一部份，但是是由 Canonical 及各個供應商向 Ubuntu 使用者提供的一項服務。"
-
-#. Type: boolean
-#. Description
-#. This template is used by the Ubuntu version of d-i.
-#. :sl2:
-#: ../apt-mirror-setup.templates-ubuntu:5001
-msgid "Use backported software?"
-msgstr "是否使用 backported 軟體？"
-
-#. Type: boolean
-#. Description
-#. This template is used by the Ubuntu version of d-i.
-#. :sl2:
-#: ../apt-mirror-setup.templates-ubuntu:5001
-msgid ""
-"Some software has been backported from the development tree to work with "
-"this release. Although this software has not gone through such complete "
-"testing as that contained in the release, it includes newer versions of some "
-"applications which may provide useful features."
-msgstr ""
-"有些軟體由開發中的版本向後移植到這個發行版中。雖然這個軟體並沒有像發行版裡的"
-"軟體那樣經過了完整的測試，但它卻提供了一些版本較新且可能包含了功能較多的應用"
-"程式。"
